--- a/rewire/informe/simulacion.tex
+++ b/rewire/informe/simulacion.tex
@@ -31,8 +31,8 @@ En particular, para el caso {\it Y2H} es del $22 \pm 6$ \%, y para {\it LIT} es 
 
 \begin{figure}
 \centering
-\includegraphics[scale = 0.6]{figuras/hist_LIT} 
-\includegraphics[scale = 0.6]{figuras/hist_Y2H} \\
+\includegraphics[scale = 0.6]{figuras/hist_LIT.png} 
+\includegraphics[scale = 0.6]{figuras/hist_Y2H.png} \\
 \caption{Distribuciones observadas del n\'umero de interacciones esenciales para los casos random de la redes estudiadas mediante simulaciones, para investigar las probabilidad $\alpha$ y $\beta$ de la red.}
 \label{fig:remocion_alternativo}
 \end{figure}
