cierre y correcciones menores

--- a/informe/caracterizacion.tex
+++ b/informe/caracterizacion.tex
@@ -2,7 +2,8 @@
 \section{Caracterizaci\'on}
 
 Siguiendo el trabajo de \citet{zotenko2008} tomamos cuatro redes de interacci\'on de levadura (\textit{Saccharomyces cerevisiae}) disponibles en el Yeast Interactome Database\footnote{http://interactome.dfci.harvard.edu/S\_cerevisiae/}. Estas redes fueron obtenidas a partir de diferentes t\'ecnicas: a trav\'es de Affinity-Purification/Mass-Spectrometry (AP-MS) \citep{apms_data}; de 
-interacciones binarias Yeast Two-Hybrid (Y2H) \citep{y2h_data} y dos curadas de literatura \citep{lit_data} {\bf (FALTA UNA CITA AQUI)}. La figura \ref{grafos} muestra una representaci\'on gr\'afica de las cuatro redes consideradas.
+interacciones binarias Yeast Two-Hybrid (Y2H) \citep{y2h_data} y dos curadas de literatura \citep{lit_data}. 
+La figura \ref{grafos} muestra una representaci\'on gr\'afica de las cuatro redes consideradas.
 
 
 % La idea del ejercicio es realizar un analisis cuantitativo de las tres redes y observar las coherencia entre las interacciones reportadas
