--- a/informe/intro.tex
+++ b/informe/intro.tex
@@ -33,5 +33,5 @@ se estudia las debilidades de las hip\'otesis de Jeong y He. Para ello utilizamo
 cuatro redes proteicas de levadura (\textit{S. cerevisiae}): Obtenida a partir 
 de Affinity-Purification/Mass-Spectrometry (AP-MS) \citep{apms_data}, de 
 interacciones binarias yeast two-hybrid (Y2H) \citep{y2h_data} y dos curadas 
-de literatura \citep{lit_data} {\bf (FALTA UNA CITA AQUI)}. Los datos para 
+de literatura \citep{lit_data}. Los datos para 
 construir las redes fueron obtenidos de la \textit{Yeast Interactome Database}.
