--- a/informe/he.tex
+++ b/informe/he.tex
@@ -32,7 +32,7 @@ Tomando el logaritmo a la ec. \ref{eq:ne} se tiene
 es decir, una relaci\'on lineal entre el grado y la probabilidad de no-esencialidad. \citet{he2006} mensiona que, debido a que
 a mayor grado $k$ es m\'as dificil encontrar nodos con grado $k$, por lo que para sus an\'alisis utiliza un umbral superior de
 $k=10$. En este trabajo se ha considerado lo mismo. La figura \ref{fig:fit} muestra los resultados del ajuste lineal para 
-nuestras redes. Debido al comportamineto irregular de la red Y2H (ver figura \ref{fig:y2h}) esta fue excluida del an\'alisis.
+nuestras redes. A pesar del comportamineto irregular de la red Y2H (ver figura \ref{fig:y2h}) esta no fue excluida del an\'alisis.
 
 \begin{figure}[!ht]
     \centering
@@ -50,8 +50,8 @@ nuestras redes. Debido al comportamineto irregular de la red Y2H (ver figura \re
         \caption{\label{fig:y2h} Y2H}
     \end{subfigure}
     \caption{\label{fig:fit} Ajustes lineales de las probabilidades de no-esencialidad y grado (ver ec. \ref{eq:ne}. 
-    (a) $\alpha = 0.53 \pm 0.002 $ y $\beta = 0.26 \pm 0.017$; (b) $\alpha = 0.073 \pm 0.008$ y $\beta = 0.224 \pm 0.043$. 
-    Debido al comportamiento irregular, Y2H ha sido excluida del an\'alisis.}
+(a) $\alpha = 0.53 \pm 0.002 $ y $\beta = 0.26 \pm 0.017$; (b) $\alpha = 0.073 \pm 0.008$ y $\beta = 0.224 \pm 0.043$.
+(c) $\alpha = 0.01 \pm 0.012 $ y $\beta = 0.16 \pm 0.067$.}
 \end{figure}
 
 
@@ -60,6 +60,10 @@ nuestras redes. Debido al comportamineto irregular de la red Y2H (ver figura \re
 
 
 \subsection{Discuci\'on}
+
+A modo de resumen de los dos m\'etodos expuestos se presenta la tabla \ref{tab:probas} con las probabilidades obtenidas para 
+cada m\'etodo. Debido a que los resultados obtenidos por las simulaciones nos parecen inconcistentes con lo esperado, los 
+excluimos para el resto del an\'alisis.
 \begin{table}[!ht]
     \centering
     \caption{\label{tab:probas} Resumen de probabilidades estimadas para cada red a trav\'es de m\'etodo de ajuste
@@ -71,13 +75,28 @@ y simulaciones.}
         \cline{3-4} \cline{6-7}
         &               &   $\alpha$    & $\beta$        &&   $\alpha$       &       $\beta$     & \\
         \hline
-        & LIT\_Reguly   & --         & --         && 5.3$ \pm$ 0.2  & 2.6 $\pm$ 1.7       &               \\
-        & LIT           & 29 $\pm$ 1 & 7 $\pm$ 3  && 7.3 $\pm$ 0.8  & 24.4 $\pm$ 4.3       &               \\
-        & Y2H           &  7 $\pm$ 1 & 14 $\pm$ 6 &&    ---             &   ---              &               \\
+        & LIT\_Reguly   & --         & --                    && 0.05 $\pm$ 0.002  & 0.02 $\pm$ 0.01       &               \\
+        & LIT           & 0.29 $\pm$ 0.01 & 0.07 $\pm$ 0.03  && 0.07 $\pm$ 0.008  & 0.24 $\pm$ 0.04       &               \\
+        & Y2H           & 0.07 $\pm$ 0.01 & 0.14 $\pm$ 0.06  && 0.01 $\pm$ 0.012  & 0.16 $\pm$ 0.06    &               \\
         \hline\hline
     \end{tabularx}
     }
 \end{table}
+
+Una posible debilidad de la hip\'otesis expuesta en \citet{he2006} es que considera las probabilidades de no-esencialidad $(1-\alpha)$ y $(1-\beta)$ como independientes, esto se traduce a que una proteina puede ser esencial debido pertenecer a un PPI u otro caso, pero no por ambas razones. El modelo de \citet{zotenko2008} plantea que la esencialidad se debe a la participaci\'on en complejos
+proteicos con funcionalidad esencial, y como una misma prote\'ina puede participar en m\'as de uno, existen multiples factores que
+determinan la esencialidad de un nodo. Es po ello que plantean que las probabilidade $\alpha$ y $\beta$ de He y colegas, no 
+son independientes en general. Para evaluar esto plantean calcular el n\'umero de pares de nodos desconectados 
+(que no son vecinos) que comparten una vecindad comun (para el caso de la red LIT\_Reguly se toman 3 o m\'as vecinos, 
+mientras que para Y2H y LIT se tomaron 2 o m\'as debido a su menor conectividad) y se estudia la cantidad de pares de igual tipo. 
+Si la hip\'otesis de He es correcta la estimaci\'on de pares de igual tipo debiera coincidir con el valor real. La tabla \ref{tab:pairs} muestra el resultado del an\'alisis expuesto para las probabilidades obtenidas a trav\'es del m\'etodo de ajuste. 
+En la tabla se puede observar como la estimaci\'on a trav\'es del m\'etodo de de He subestima la cantidad de pares de igual tipo, 
+es decir, considera menos relaciones entre nodos de las que realmente hay, estas relaciones faltantes son las que Zotenko y colegas
+explican a trav\'es de la participacion en los complejos proteicos (ya sean esenciales o no).
+
+
+Para evaluar la calidad de la hip\'otesis expuesta en \citet{he2006} contamos la cantidad de 
+La tabla \ref{tab:pairs} muestra 
 
 
 \begin{table}[!ht]
@@ -94,7 +113,7 @@ y simulaciones.}
  %       & AP-MS         & 11613 & 5924 & &  &   
         & LIT\_Reguly   & 10777   & 6187        &         5716          &               \\
         & LIT           & 1858    & 1059        &          963          &               \\
-        & Y2H           & 2258    & 1493        &                       &               \\
+        & Y2H           & 2258    & 1493        &          1299         &               \\
         \hline\hline
     \end{tabularx}
     }
