.tex de simulaciones

--- a/informe/he.tex
+++ b/informe/he.tex
@@ -55,7 +55,8 @@ nuestras redes. Debido al comportamineto irregular de la red Y2H (ver figura \re
 \end{figure}
 
 
-\subsection{M\'etodo de simulaciones}
+\include{simulacion}
+
 
 \subsection{Discuci\'on}
 \begin{table}[!ht]
