--- a/informe/seba.tex
+++ b/informe/seba.tex
@@ -8,20 +8,20 @@
  
 \begin{figure}
 \centering
-\includegraphics[scale = 0.3]{figuras/AP-MS_b} 
-\includegraphics[scale = 0.3]{figuras/Y2H_b} \\
-\includegraphics[scale = 0.3]{figuras/LIT_b} 
-\includegraphics[scale = 0.3]{figuras/LIT_Reguly_b} 
+\includegraphics[scale = 0.3]{figuras/AP-MS_b-eps-converted-to} 
+\includegraphics[scale = 0.3]{figuras/Y2H_b-eps-converted-to} \\
+\includegraphics[scale = 0.3]{figuras/LIT_b-eps-converted-to} 
+\includegraphics[scale = 0.3]{figuras/LIT_Reguly_b-eps-converted-to} 
 \caption{Tamaño relativo de la componente conectada más grande a medida que se remueven los nodos ordenados con diferentes criterios de centralidad. Se incluye el impacto de remover las proteínas esenciales y remover nodos al azar. En todos los casos se puede observar que el impacto de remoción (caída del tamaño del fragmento conectado) es mucho más alto al utilizar un criterio de centralidad en comparación con la remoción de las esenciales, que en algunos casos, prácticamente coincide con la remoción al azar.}
 \label{fig:remocion}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[scale = 0.3]{figuras/AP-MS} 
-\includegraphics[scale = 0.3]{figuras/Y2H} \\
-\includegraphics[scale = 0.3]{figuras/LIT} 
-\includegraphics[scale = 0.3]{figuras/LIT_Reguly} 
+\includegraphics[scale = 0.3]{figuras/AP-MS-eps-converted-to} 
+\includegraphics[scale = 0.3]{figuras/Y2H-eps-converted-to} \\
+\includegraphics[scale = 0.3]{figuras/LIT-eps-converted-to} 
+\includegraphics[scale = 0.3]{figuras/LIT_Reguly-eps-converted-to} 
 \caption{Tamaño relativo de la componente conectada más grande a medida que se remueven los nodos ordenados con diferentes criterios de centralidad, en forma iterativa, es decir, se remueve el nodo más central en la configuración actual de la red. Se puede observar que el impacto de remoción es mayor que el de la figure \ref{fig:remocion}.}
 \label{fig:remocion_alternativo}
 \end{figure}
