figuras de histogramas de simulaciones

--- a/rewire/informe/simulacion.tex
+++ b/rewire/informe/simulacion.tex
@@ -21,5 +21,18 @@ Siguiendo el m\'etodo de \cite{he2006}, determinamos la fracci\'on de interaccio
 Los valores para las diferentes redes se muestran en la tabla \ref{tab:probas}.
 
 
+%--- overlapping
+% NOTE: sacado de:
+% ./beta -- ...
+Notar que algunos nodos resultaron afectados por ambos factores; es decir por asignaci\'on random y por PPIs esenciales. 
+En particular, para el caso {\it Y2H} es del $22 \pm 6$ \%, y para {\it LIT} es del $7.10 \pm 3.04$.
+
+\begin{figure}
+\centering
+\includegraphics[scale = 0.6]{figuras/hist_LIT} 
+\includegraphics[scale = 0.6]{figuras/hist_Y2H} \\
+\caption{Distribuciones observadas del n\'umero de interacciones esenciales para los casos random de la redes estudiadas mediante simulaciones, para investigar las probabilidad $\alpha$ y $\beta$ de la red.}
+\label{fig:remocion_alternativo}
+\end{figure}
 
 %EO
