--- a/informe/he.tex
+++ b/informe/he.tex
@@ -71,9 +71,9 @@ y simulaciones.}
         \cline{3-4} \cline{6-7}
         &               &   $\alpha$    & $\beta$        &&   $\alpha$       &       $\beta$     & \\
         \hline
-        & LIT\_Reguly   & --  & --     && 5.3$ \pm$ 0.2  & 2.6 $\pm$ 1.7       &               \\
-        & LIT           & 29 $\pm$ 1 & 7 $\pm$ 3   && 7.3 $\pm$ 0.8  & 24.4 $\pm$ 4.3       &               \\
-        & Y2H           &  7 $\pm$ 1 & 14 $\pm$ 6  &&    ---             &   ---              &               \\
+        & LIT\_Reguly   & --         & --         && 5.3$ \pm$ 0.2  & 2.6 $\pm$ 1.7       &               \\
+        & LIT           & 29 $\pm$ 1 & 7 $\pm$ 3  && 7.3 $\pm$ 0.8  & 24.4 $\pm$ 4.3       &               \\
+        & Y2H           &  7 $\pm$ 1 & 14 $\pm$ 6 &&    ---             &   ---              &               \\
         \hline\hline
     \end{tabularx}
     }
@@ -89,12 +89,12 @@ y simulaciones.}
         \hline\hline
         &               & Pares   & Pares del   & \multicolumn{2}{c}{Pares esperados del mismo tipo }             \\ 
         \cline{5-6}
-        &               & Totales & mismo tipo  & Simulaci\'on  &        Ajuste         &      \\
+        &               & Totales & mismo tipo  &  &        Ajuste         &      \\
         \hline
  %       & AP-MS         & 11613 & 5924 & &  &            \\ 
-        & LIT\_Reguly   & 10777   & 6187        &               &         5716          &               \\
-        & LIT           & 1858    & 1059        &               &          963          &               \\
-        & Y2H           & 2258    & 1493        &               &                       &               \\
+        & LIT\_Reguly   & 10777   & 6187        &  &         5716          &               \\
+        & LIT           & 1858    & 1059        &  &          963          &               \\
+        & Y2H           & 2258    & 1493        &  &          --           &               \\
         \hline\hline
     \end{tabularx}
     }
