--- a/rewire/informe/simulacion.tex
+++ b/rewire/informe/simulacion.tex
@@ -6,7 +6,9 @@ Es dif\'icil identificar interacciones esenciales (PPIs) experimentalmente en la
 
 Aqu\'i usamos un m\'etodo computacional para evaluar la prevalecencia de enlaces esenciales PPIs y la contribuci\'on de PPIs esenciales a la esencialidad de genes al nivel gen\'omico.
 
-Nuestro an\'alisis se enfoca en las redes {\it LIT}, {\it LIT-Reguly}, y {\it Y2H}, excluyendo a la red {\it AP-MS}, como se hizo en la secci\'on anterior.
+Nuestro an\'alisis se enfoca en las redes {\it LIT} y {\it Y2H}.
+%, excluyendo a la red {\it AP-MS}, como se hizo en la secci\'on anterior. 
+%Tambi\'en excluimos a la red {\it LIT-Reguly} debido 
 
 Como se mencion\'o antes, dos prote\'inas que forman un enlace esencial PPI deben ser esenciales.
 Por el contrario, las interacciones entre prote\'inas esenciales (IBEPs, {\it Interaction Between Essential Proteins}, por sus siglas en ingl\'es) pueden o no ser esenciales, dado que la esencialidad de una prote\'ina puede deberse a otros factores adem\'as de las PPIs.
