citas y cosas menores

--- a/informe/biblio.bib
+++ b/informe/biblio.bib
@@ -1,3 +1,17 @@
+
+@article{pereira05,
+author = {Pereira-Leal, José B. and Audit, Benjamin and Peregrin-Alvarez, José M. and Ouzounis, Christos A.}, 
+title = {An Exponential Core in the Heart of the Yeast Protein Interaction Network},
+volume = {22}, 
+number = {3}, 
+pages = {421-425}, 
+year = {2005}, 
+doi = {10.1093/molbev/msi024}, 
+URL = {http://mbe.oxfordjournals.org/content/22/3/421.abstract}, 
+eprint = {http://mbe.oxfordjournals.org/content/22/3/421.full.pdf+html}, 
+journal = {Molecular Biology and Evolution} 
+}
+
 @article{lit_data,
     title={Comprehensive curation and analysis of global interaction networks in Saccharomyces cerevisiae},
     author={Reguly, Teresa and Breitkreutz, Ashton and Boucher, Lorrie and Breitkreutz, Bobby-Joe and Hon, Gary C and Myers, Chad L and Parsons, Ainslie and Friesen, Helena and Oughtred, Rose and Tong, Amy and others},
