--- a/rewire/informe/simulacion.tex
+++ b/rewire/informe/simulacion.tex
@@ -6,7 +6,9 @@ Es dif\'icil identificar interacciones esenciales (PPIs) experimentalmente en la
 
 Aqu\'i usamos un m\'etodo computacional para evaluar la prevalecencia de enlaces esenciales PPIs y la contribuci\'on de PPIs esenciales a la esencialidad de genes al nivel gen\'omico.
 
-Nuestro an\'alisis se enfoca en las redes {\it LIT}, {\it LIT-Reguly}, y {\it Y2H}, excluyendo a la red {\it AP-MS}, como se hizo en la secci\'on anterior.
+Nuestro an\'alisis se enfoca en las redes {\it LIT} y {\it Y2H}.
+%, excluyendo a la red {\it AP-MS}, como se hizo en la secci\'on anterior. 
+%Tambi\'en excluimos a la red {\it LIT-Reguly} debido 
 
 Como se mencion\'o antes, dos prote\'inas que forman un enlace esencial PPI deben ser esenciales.
 Por el contrario, las interacciones entre prote\'inas esenciales (IBEPs, {\it Interaction Between Essential Proteins}, por sus siglas en ingl\'es) pueden o no ser esenciales, dado que la esencialidad de una prote\'ina puede deberse a otros factores adem\'as de las PPIs.
@@ -15,10 +17,22 @@ Esta caracter\'istica nos permite estimar el n\'umero de PPIs esenciales en una 
 Dado el n\'umero total de interacciones IBEPs $N_{ie}$ para cada red, generamos una red de control haciendo un recableado de los enlaces, manteniendo la distribuci\'on de grado $P(k)$ para cada nodo.
 Repitiendo este procedimiento 5000 veces (1000 para la red {\it Y2H}), obtenemos la distribuci\'on del n\'umero ($n_{ie}$) de enlaces esenciales (IBEPs) en redes recableadas al azar.
 En todos los caso, el m\'aximo valores de la distribuci\'on no supera el caso de la red real; es decir, $max(n_{ie}) < N_{ie}$ siempre.
-Este exceso del caso real tambi\'en se observa en otros casos de PPIs de levadura y en PPIs de nematodos {\bf CITAR 14 y 15, ver p. 2}.
+Este exceso del caso real tambi\'en se observa en otros casos de PPIs de levadura y en PPIs de nematodos \cite{pereira05}.
 
-Siguiendo el m\'etodo de \cite{he2006}, determinamos la fracci\'on de interacciones esenciales PPI como $\alpha = (N_{ie} - <n_{ie}>)/(N_{nod})$, siendo $N_{tot}$ el n\'umero total de nodos de la red.
+Siguiendo el m\'etodo de \cite{he2006}, asumimos que el exceso de IBEPs de debe enteramente a la presencia de PPIs, por lo cual estimamos $\alpha = (N_{ie} - <n_{ie}>)/(N_{nod})$, siendo $N_{tot}$ el n\'umero total de nodos de la red.
 Los valores para las diferentes redes se muestran en la tabla \ref{tab:probas}.
+
+%--- calculo del beta
+Adem\'as de de las interacciones esenciales PPIs, hay otros factores (e.g. interacciones proteina-ADN) que puede contribuir para q un nodo sea esencial.
+Para estimar la probalidad $\beta$ asociado a estos otros factores, primero removemos la informaci\'on de esencialidad en todos los nodos y enlaces.
+
+Luego, asignamos $N_{ie} - n_{ie}$ enlaces esenciales al azar a la red, donde $n_{ie}$ es un n\'umero aleatorio q se deduce de su distribuci\'on de probabilidad (ver Figura \ref{fig:hist_simulaciones}).
+Notar que $N_{ie}-n_{ie}$ es el n\'umero estimado de enlaces esenciales.
+Luego etiquetamos esencialidad en los nodos q est\'en conectados a estos enlaces.
+
+Despu\'es, imitamos el efecto de esencialidad debido a otros factores marcando esencialidad en nodos al azar, hasta que se completen $N_e$ nodos esenciales en la red.
+Notar que hay nodos q se etiquetaron esenciales por ambos motivos, por PPI y por azar.
+Repitiendo este procedimiento $10000$ veces, encontramos los valores de probabilidad repotados en la tabla \ref{tab:probas}.
 
 
 %--- overlapping
@@ -29,10 +43,10 @@ En particular, para el caso {\it Y2H} es del $22 \pm 6$ \%, y para {\it LIT} es 
 
 \begin{figure}
 \centering
-\includegraphics[scale = 0.6]{figuras/hist_LIT} 
-\includegraphics[scale = 0.6]{figuras/hist_Y2H} \\
+\includegraphics[scale = 0.6]{figuras/hist_LIT.png} 
+\includegraphics[scale = 0.6]{figuras/hist_Y2H.png} \\
 \caption{Distribuciones observadas del n\'umero de interacciones esenciales para los casos random de la redes estudiadas mediante simulaciones, para investigar las probabilidad $\alpha$ y $\beta$ de la red.}
-\label{fig:remocion_alternativo}
+\label{fig:hist_simulaciones}
 \end{figure}
 
 %EO
